- ADD: TortoiseMerge remembers its last size and window state. (Stefan)
- ADD: If all versioned files are selected in the commit dialog, and
       only one target was selected in the explorer for commit then
       commit recursively instead of committing the file list. (Stefan)
- ADD: Hitting F5 in the log dialog does the same as the "fetch all"
       button. (Stefan)
- CHG: Removed the info picture in the commit dialog. The statistics
       are now shown in the tooltip for the info line just below
       the filelist. (Stefan)
- BUG: The option "Don't convert files when diffing against BASE"
       was ignored due to wrong brackets in the code. (Stefan)
- BUG: The added icon overlay wasn't shown due to a wrong registry
       entry set during installation. (Stefan Fuhrmann)
- BUG: The revision column wasn't sorted correctly. (Stefan Fuhrmann)
- BUG: The locatorbar in TortoiseMerge shrank continuously whith every
       reload. (Stefan)
- BUG: TortoiseMerge calculated the size of the scrollbars wrong for
       files with many tabs in it. (Stefan)
- BUG: The cache for the drivetypes were initialized wrong. This
       lead to access to the diskette drive even if overlays
       for removable drives was disabled. (Stefan)
- BUG: Merging used always the HEAD revision, as did Blame. (Stefan)

Version 1.0.4
- ADD: Before a commit, TSVN scans all files in the working copy
       and adjusts the case if it got changed. (Stefan)
- ADD: Enhanced repository browser by a set of controls which allow
       changing of URL and revision from within the browser (Thomas)
- ADD: Actions like delete and copy in repo browser now immediately
       refresh the repository tree (Thomas)
- ADD: Added a "Refresh" entry to the repo browser's menu (Thomas)
- ADD: The resizable dialogs remember their sizes. (Stefan)
- ADD: The "check for updates" dialog shows a "+" after
       a added/deleted filestatus if it was actually a
       rename/move/copy. (Stefan)