@@ -211,6 +211,8 @@ BEGIN
     PUSHBUTTON      "Get &All",IDC_GETALL,129,315,50,14,WS_DISABLED
     DEFPUSHBUTTON   "&OK",IDOK,187,315,50,14
     PUSHBUTTON      "&Help",IDHELP,243,315,50,14
+    CONTROL         "",IDC_PROGRESS,"msctls_progress32",NOT WS_VISIBLE | 
+                    WS_BORDER,7,317,114,9
 END
 
 IDD_LOGPROMPT DIALOGEX 0, 0, 300, 265
