@@ -1,3 +1,5 @@
+- ADD: The log dialog shows a progress bar while fetching
+       the log messages. (Stefan)
 - ADD: TortoiseMerge remembers its last size and window state. (Stefan)
 - ADD: If all versioned files are selected in the commit dialog, and
        only one target was selected in the explorer for commit then
